@@ -487,6 +487,11 @@ void init_rpm(void)
     REGISTER_ENUM(RPMSENSE_EQUAL);
     REGISTER_ENUM(RPMSENSE_NOTEQUAL);
     REGISTER_ENUM(RPMSENSE_FIND_REQUIRES);
+    REGISTER_ENUM(RPMSENSE_PREREQ);
+    REGISTER_ENUM(RPMSENSE_SCRIPT_PRE);
+    REGISTER_ENUM(RPMSENSE_SCRIPT_POST);
+    REGISTER_ENUM(RPMSENSE_SCRIPT_PREUN);
+    REGISTER_ENUM(RPMSENSE_SCRIPT_POSTUN)
 
     REGISTER_ENUM(RPMDEPS_FLAG_NOUPGRADE);
     REGISTER_ENUM(RPMDEPS_FLAG_NOREQUIRES);
